amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


VERSION 1.2-beta1:
  ADD: Cover image and lyric fetchers include filters for common
       extensions, such as (Disc 1). (BR 90630)
  ADD: Ability to choose from four different Amazon locales. (BR 90664)
  ADD: OSD now draws gradient instead of solid colour.
  ADD: 'Stop after current song' functionality. (BR 88652)
  FIX: Queue function from context/collection browsers actually properly
       queues tracks. (BR 90319)
  ADD: MySQL database support. Patch by Andreas Mair <am_ml@linogate.com>.
       Please refer to mailing list for detailed instructions.
  ADD: Metadata history for streams in Context-Browser. (BR 89839)
  ADD: Command line option --engine.
  ADD: OSD text is now configurable, and it displays the album cover.
  FIX: Remote folders are read recursively when dropped on the playlist.
  FIX: Audiocd protocol in filebrowser had empty folders.
  ADD: Cache system for current-track animation in playlist. Reduces
       CPU load when the playlist is visible.
  ADD: 10-band IIR equalizer for GStreamer-engine.
  FIX: The background gradient effect in Context-Browser is now much
       faster. The gradient also looks nicer. (BR 91276)
  FIX: Password-protected streams did not work correctly. (BR 91184).
       Patch by <javapojken@yahoo.se>.
  ADD: NMM-engine was rewritten and updated for the latest NMM release.
       Supports audio and video playback.
  ADD: Cover-Manager supports drag-and-drop.
  ADD: Tags are now read from the Collection database if they are already
       stored. This speeds up adding items to the playlist. (BR 90137)
  ADD: Context-browser shows "Suggested Tracks", utilizing audioscrobbler.
  FIX: Configure does no longer print "Good - Configure has finished" when
       a dependency is missing.
  ADD: Shaded current-track marker in playlist.
  ADD: Automatic song lyrics display.
  CHG: Internal SQLite upgraded to 3.0.8.

VERSION 1.1.1: