@@ -4,6 +4,7 @@ amaroK ChangeLog
 
 
 VERSION 1.2-beta1:
+  ADD: Vorbis stream metadata support (GStreamer-engine). (BR 82378)
   ADD: Cover image and lyric fetchers include filters for common
        extensions, such as (Disc 1). (BR 90630)
   ADD: Ability to choose from four different Amazon locales. (BR 90664)
